docker/prod/k8s/app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  namespace: release-time
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: jutonz/release-time-prod-app:1
        name: app
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
      restartPolicy: Always
