docker/prod/k8s/psql-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: psql
  namespace: release-time
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - image: jutonz/release-time-prod-psql:1
        name: psql
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash", "/etc/backup.sh"]
      restartPolicy: Always
