docker/prod/k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: release-time
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
