docker/prod/k8s/psql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: psql
  namespace: release-time
spec:
  selector:
    app: psql
  ports:
  - name: psql
    port: 5432
    targetPort: 5432
