docker/prod/k8s/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: release-time
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: releases.jutonz.com
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
